# civic-service-request-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: agent_service.py  civic_requests.db  database.py  main.py  mcp_tools.py  models.py  pyproject.toml  schemas.py
docs/: 01_business_statement.md  02_logical_structure.md  03_technical_implementation_guide.md  04_agent_regeneration_blueprint.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: requests.js
frontend/src/components/: RequestDashboard.jsx  RequestForm.jsx
