[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "civic-service-request-agent"
version = "1.0.0"
description = "Agentic civic service request triage for LA Department of General Services"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "google-genai>=1.0.0",
    "python-dotenv==1.0.1",
]
